--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emailjs/browser": "^3.6.2",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
